[package]
name = "dstats"
version = "0.1.3"
authors = ["Adam Eury <euryadam@gmail.com>"]
edition = "2021"
description = """A simple utility for finding large files on your system."""
keywords = ["disk", "space", "usage", "large", "files"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/dstats"
homepage = "https://github.com/aleury/dstats"
repository = "https://github.com/aleury/dstats"
exclude = ["/.github/"]

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
spinoff = { version = "0.8.0", features = ["dots"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
