[package]
name = "spacehog"
version = "0.1.7"
authors = ["Adam Eury <euryadam@gmail.com>"]
edition = "2021"
description = """A simple utility for finding large files on your system."""
keywords = ["disk", "space", "usage", "large", "files"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/spacehog"
homepage = "https://github.com/aleury/spacehog"
repository = "https://github.com/aleury/spacehog"
exclude = ["/.github/"]

[dependencies]
anyhow = "1.0.87"
clap = { version = "4.5.16", features = ["derive"] }
crossterm = "0.28.1"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.12.0"
